gccida/c1/decls_for_scope
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decls_for_scope/src/dwarf2out.c:11815:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decls_for_scope/src/dwarf2out.c:11816:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decls_for_scope/src/dwarf2out.c:11835:23: error: expected expression
v7 = **( tree_node ***)( low + 8); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decls_for_scope/src/dwarf2out.c:11835:10: error: use of undeclared identifier 'tree_node'
v7 = **( tree_node ***)( low + 8); 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decls_for_scope/src/dwarf2out.c:11836:19: error: expected expression
if ( ( tree_node *)low != v7 && ( !*( _QWORD *)( low + 112) || decl_ultimate_origin( ( tree)low) != v7) ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decls_for_scope/src/dwarf2out.c:11836:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)low != v7 && ( !*( _QWORD *)( low + 112) || decl_ultimate_origin( ( tree)low) != v7) ) 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/decls_for_scope/src/obj/dwarf2out.o] Error 1
